--- a/Portfolio/content/myCustom.css
+++ b/Portfolio/content/myCustom.css
@@ -5,7 +5,7 @@
     border-width: 3px;
     border-radius: 8px;
     cursor: pointer;
-    width: 50%;
+    /*width: 50%;*/
     height: 166px;
 }
 #cc1:hover, #cc2:hover, #cc3:hover, #cc4:hover, #cc5:hover, #cc6:hover {
@@ -79,5 +79,8 @@
 /*@media only screen and (max-width: 991px) {
     #cc1, #cc2, #cc3, #cc4, #cc5, #cc6 {
         width: 100%;
+    }
+    #cc1:hover, #cc2:hover, #cc3:hover, #cc4:hover, #cc5:hover, #cc6:hover {
+
     }
 }*/
