--- a/Portfolio/content/myCustom.css
+++ b/Portfolio/content/myCustom.css
@@ -32,7 +32,7 @@
     box-shadow: 10px 10px 5px grey;
     filter: blur(8px)
 }
-#port01:hover, #port02:hover, #port03:hover, #port04:hover, #port05:hover, #port06:hover {
+#port01:hover, #port02:hover {
     cursor: pointer;
     filter: blur(0px)
     /*box-shadow: none*/
