--- a/Portfolio/content/style.css
+++ b/Portfolio/content/style.css
@@ -65,10 +65,22 @@ h1, h2, h3, h4, h5, h6 {
 
 .navbar-default .navbar-brand {
   color: #fff;
-  font-size: 34px;
+  font-size: 20px; /*34px;*/
   text-transform: uppercase;
   font-weight: 700;
   letter-spacing: 2px;
+}
+
+@media (max-width: 991px) {
+    .navbar-default .navbar-brand {
+        font-size: 10px;
+    }
+}
+
+@media (max-width: 331px) {
+    .navbar-default .navbar-brand {
+        font-size: 8px;
+    }
 }
 
 .navbar-default .navbar-nav>.active>a, .navbar-default .navbar-nav>.active>a:focus, .navbar-default .navbar-nav>.active>a:hover {
@@ -93,7 +105,7 @@ h1, h2, h3, h4, h5, h6 {
   transition: all 0.5s;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 767px) {
 	.navbar-collapse {
 		background: rgba(0, 0, 0, 0.8);
 		border-top: 0;
